src/antlr/TcclParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { TcclParserListener } from "./TcclParserListener.js";
import { TcclParserVisitor } from "./TcclParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class TcclParser extends antlr.Parser {
    public static readonly INDENT = 1;
    public static readonly DEDENT = 2;
    public static readonly CHORD_INPUT_KEY = 3;
    public static readonly INPUT_KEY_SEPARATOR = 4;
    public static readonly INPUT_OUTPUT_SEPARATOR = 5;
    public static readonly CHORD_OUTPUT_KEY = 6;
    public static readonly NEWLINE = 7;
    public static readonly RULE_tcclFile = 0;
    public static readonly RULE_chordNode = 1;
    public static readonly RULE_chord = 2;
    public static readonly RULE_chordInput = 3;
    public static readonly RULE_chordOutput = 4;

    public static readonly literalNames = [
        null, null, null, null, "' + '", "' = '"
    ];

    public static readonly symbolicNames = [
        null, "INDENT", "DEDENT", "CHORD_INPUT_KEY", "INPUT_KEY_SEPARATOR", 
        "INPUT_OUTPUT_SEPARATOR", "CHORD_OUTPUT_KEY", "NEWLINE"
    ];
    public static readonly ruleNames = [
        "tcclFile", "chordNode", "chord", "chordInput", "chordOutput",
    ];

    public get grammarFileName(): string { return "TcclParser.g4"; }
    public get literalNames(): (string | null)[] { return TcclParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return TcclParser.symbolicNames; }
    public get ruleNames(): string[] { return TcclParser.ruleNames; }
    public get serializedATN(): number[] { return TcclParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, TcclParser._ATN, TcclParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public tcclFile(): TcclFileContext {
        let localContext = new TcclFileContext(this.context, this.state);
        this.enterRule(localContext, 0, TcclParser.RULE_tcclFile);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 13;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 3) {
                {
                {
                this.state = 10;
                this.chordNode();
                }
                }
                this.state = 15;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 16;
            this.match(TcclParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public chordNode(): ChordNodeContext {
        let localContext = new ChordNodeContext(this.context, this.state);
        this.enterRule(localContext, 2, TcclParser.RULE_chordNode);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 18;
            this.chord();
            this.state = 27;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 19;
                this.match(TcclParser.INDENT);
                this.state = 21;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                do {
                    {
                    {
                    this.state = 20;
                    this.chordNode();
                    }
                    }
                    this.state = 23;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                } while (_la === 3);
                this.state = 25;
                this.match(TcclParser.DEDENT);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public chord(): ChordContext {
        let localContext = new ChordContext(this.context, this.state);
        this.enterRule(localContext, 4, TcclParser.RULE_chord);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 29;
            this.chordInput();
            this.state = 30;
            this.match(TcclParser.INPUT_OUTPUT_SEPARATOR);
            this.state = 31;
            this.chordOutput();
            this.state = 32;
            this.match(TcclParser.NEWLINE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public chordInput(): ChordInputContext {
        let localContext = new ChordInputContext(this.context, this.state);
        this.enterRule(localContext, 6, TcclParser.RULE_chordInput);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 34;
            this.match(TcclParser.CHORD_INPUT_KEY);
            this.state = 37;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 35;
                this.match(TcclParser.INPUT_KEY_SEPARATOR);
                this.state = 36;
                this.match(TcclParser.CHORD_INPUT_KEY);
                }
                }
                this.state = 39;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 4);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public chordOutput(): ChordOutputContext {
        let localContext = new ChordOutputContext(this.context, this.state);
        this.enterRule(localContext, 8, TcclParser.RULE_chordOutput);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 42;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 41;
                this.match(TcclParser.CHORD_OUTPUT_KEY);
                }
                }
                this.state = 44;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 6);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!TcclParser.__ATN) {
            TcclParser.__ATN = new antlr.ATNDeserializer().deserialize(TcclParser._serializedATN);
        }

        return TcclParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(TcclParser.literalNames, TcclParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return TcclParser.vocabulary;
    }

    private static readonly decisionsToDFA = TcclParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class TcclFileContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(TcclParser.EOF, 0)!;
    }
    public chordNode(): ChordNodeContext[];
    public chordNode(i: number): ChordNodeContext | null;
    public chordNode(i?: number): ChordNodeContext[] | ChordNodeContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ChordNodeContext);
        }

        return this.getRuleContext(i, ChordNodeContext);
    }
    public override get ruleIndex(): number {
        return TcclParser.RULE_tcclFile;
    }
    public override enterRule(listener: TcclParserListener): void {
        if(listener.enterTcclFile) {
             listener.enterTcclFile(this);
        }
    }
    public override exitRule(listener: TcclParserListener): void {
        if(listener.exitTcclFile) {
             listener.exitTcclFile(this);
        }
    }
    public override accept<Result>(visitor: TcclParserVisitor<Result>): Result | null {
        if (visitor.visitTcclFile) {
            return visitor.visitTcclFile(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ChordNodeContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public chord(): ChordContext {
        return this.getRuleContext(0, ChordContext)!;
    }
    public INDENT(): antlr.TerminalNode | null {
        return this.getToken(TcclParser.INDENT, 0);
    }
    public DEDENT(): antlr.TerminalNode | null {
        return this.getToken(TcclParser.DEDENT, 0);
    }
    public chordNode(): ChordNodeContext[];
    public chordNode(i: number): ChordNodeContext | null;
    public chordNode(i?: number): ChordNodeContext[] | ChordNodeContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ChordNodeContext);
        }

        return this.getRuleContext(i, ChordNodeContext);
    }
    public override get ruleIndex(): number {
        return TcclParser.RULE_chordNode;
    }
    public override enterRule(listener: TcclParserListener): void {
        if(listener.enterChordNode) {
             listener.enterChordNode(this);
        }
    }
    public override exitRule(listener: TcclParserListener): void {
        if(listener.exitChordNode) {
             listener.exitChordNode(this);
        }
    }
    public override accept<Result>(visitor: TcclParserVisitor<Result>): Result | null {
        if (visitor.visitChordNode) {
            return visitor.visitChordNode(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ChordContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public chordInput(): ChordInputContext {
        return this.getRuleContext(0, ChordInputContext)!;
    }
    public INPUT_OUTPUT_SEPARATOR(): antlr.TerminalNode {
        return this.getToken(TcclParser.INPUT_OUTPUT_SEPARATOR, 0)!;
    }
    public chordOutput(): ChordOutputContext {
        return this.getRuleContext(0, ChordOutputContext)!;
    }
    public NEWLINE(): antlr.TerminalNode {
        return this.getToken(TcclParser.NEWLINE, 0)!;
    }
    public override get ruleIndex(): number {
        return TcclParser.RULE_chord;
    }
    public override enterRule(listener: TcclParserListener): void {
        if(listener.enterChord) {
             listener.enterChord(this);
        }
    }
    public override exitRule(listener: TcclParserListener): void {
        if(listener.exitChord) {
             listener.exitChord(this);
        }
    }
    public override accept<Result>(visitor: TcclParserVisitor<Result>): Result | null {
        if (visitor.visitChord) {
            return visitor.visitChord(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ChordInputContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public CHORD_INPUT_KEY(): antlr.TerminalNode[];
    public CHORD_INPUT_KEY(i: number): antlr.TerminalNode | null;
    public CHORD_INPUT_KEY(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(TcclParser.CHORD_INPUT_KEY);
    	} else {
    		return this.getToken(TcclParser.CHORD_INPUT_KEY, i);
    	}
    }
    public INPUT_KEY_SEPARATOR(): antlr.TerminalNode[];
    public INPUT_KEY_SEPARATOR(i: number): antlr.TerminalNode | null;
    public INPUT_KEY_SEPARATOR(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(TcclParser.INPUT_KEY_SEPARATOR);
    	} else {
    		return this.getToken(TcclParser.INPUT_KEY_SEPARATOR, i);
    	}
    }
    public override get ruleIndex(): number {
        return TcclParser.RULE_chordInput;
    }
    public override enterRule(listener: TcclParserListener): void {
        if(listener.enterChordInput) {
             listener.enterChordInput(this);
        }
    }
    public override exitRule(listener: TcclParserListener): void {
        if(listener.exitChordInput) {
             listener.exitChordInput(this);
        }
    }
    public override accept<Result>(visitor: TcclParserVisitor<Result>): Result | null {
        if (visitor.visitChordInput) {
            return visitor.visitChordInput(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ChordOutputContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public CHORD_OUTPUT_KEY(): antlr.TerminalNode[];
    public CHORD_OUTPUT_KEY(i: number): antlr.TerminalNode | null;
    public CHORD_OUTPUT_KEY(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(TcclParser.CHORD_OUTPUT_KEY);
    	} else {
    		return this.getToken(TcclParser.CHORD_OUTPUT_KEY, i);
    	}
    }
    public override get ruleIndex(): number {
        return TcclParser.RULE_chordOutput;
    }
    public override enterRule(listener: TcclParserListener): void {
        if(listener.enterChordOutput) {
             listener.enterChordOutput(this);
        }
    }
    public override exitRule(listener: TcclParserListener): void {
        if(listener.exitChordOutput) {
             listener.exitChordOutput(this);
        }
    }
    public override accept<Result>(visitor: TcclParserVisitor<Result>): Result | null {
        if (visitor.visitChordOutput) {
            return visitor.visitChordOutput(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
